--- a/meson.build
+++ b/meson.build
@@ -22,15 +22,16 @@ executable(
   '2048',
   sources: [
     'src/main.cpp',
-    'src/app/app.cpp',
-    'src/app/app_run.cpp',
-    'src/app/app_init.cpp',
-    'src/app/app_update.cpp',
-    'src/app/app_handle_event.cpp',
-    'src/app/app_render.cpp',
-    'src/app/app_clean.cpp',
-    'src/canvas.cpp',
-    'src/game_object.cpp',
+    'src/core/app/app.cpp',
+    'src/core/app/app_run.cpp',
+    'src/core/app/app_init.cpp',
+    'src/core/app/app_update.cpp',
+    'src/core/app/app_handle_event.cpp',
+    'src/core/app/app_render.cpp',
+    'src/core/app/app_clean.cpp',
+    'src/helper/canvas.cpp',
+    'src/helper/game_object.cpp',
+    'src/helper/logger.cpp',
   ],
   include_directories: incdir,
   dependencies: [sdl2_dep, sdl2_ttf_dep, sdl2_gfx_dep],
